[gd_scene load_steps=15 format=3 uid="uid://bqcye3p3xus0m"]

[ext_resource type="PackedScene" uid="uid://bcwkugn6v3oy7" path="res://addons/godot_state_charts/utilities/state_chart_debugger.tscn" id="1_p05oh"]
[ext_resource type="Script" path="res://Scripts/home_base.gd" id="2_7e0ir"]
[ext_resource type="Script" path="res://Scripts/health_ui.gd" id="3_8aa4j"]
[ext_resource type="Resource" uid="uid://dwjri8tpxrnh7" path="res://Resources/Phases/TestingPhase/TESTING_PHASE.tres" id="3_hdw1t"]
[ext_resource type="Script" path="res://Scripts/level_controller.gd" id="5_qh4mb"]
[ext_resource type="Texture2D" uid="uid://i08asv57scio" path="res://Sprites/home base.png" id="6_ej1rl"]
[ext_resource type="Script" path="res://Scripts/enemy_spawner.gd" id="8_eocyy"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="8_vr8dj"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="9_m634t"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="10_kvbm7"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="11_eiycb"]
[ext_resource type="PackedScene" uid="uid://d3h3hkhvoekk5" path="res://Prefabs/basic_turret.tscn" id="12_0rquj"]

[sub_resource type="Curve2D" id="Curve2D_4io5x"]
resource_local_to_scene = true
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 42, 617, -227.86, -1.12246, 227.86, 1.12246, 327, 21, -186.329, 28.0616, 186.329, -28.0616, 520, 601, -142.553, -25.8166, 142.553, 25.8166, 800, 51, -143.675, -13.4695, 143.675, 13.4695, 912, 583, 0, 0, 0, 0, 1095, 38)
}
point_count = 6

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cyjm1"]
size = Vector2(107, 44)

[node name="Level01" type="Node2D"]

[node name="StateChartDebugger" parent="." instance=ExtResource("1_p05oh")]
offset_left = 5.0
offset_top = 3.0
offset_right = 520.0
offset_bottom = 594.0
initial_node_to_watch = NodePath("../Level_StateChart")
metadata/_edit_use_anchors_ = true

[node name="Level_Controller" type="Node" parent="."]
script = ExtResource("5_qh4mb")
phases = Array[Resource("res://Scripts/level_phase_resource.gd")]([ExtResource("3_hdw1t")])

[node name="Phase_Cooldown" type="Timer" parent="Level_Controller"]
unique_name_in_owner = true
one_shot = true

[node name="Enemy_Spawner" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("8_eocyy")

[node name="Enemy_Path" type="Path2D" parent="Enemy_Spawner"]
unique_name_in_owner = true
curve = SubResource("Curve2D_4io5x")

[node name="Spawn_Cooldown" type="Timer" parent="Enemy_Spawner"]
unique_name_in_owner = true
one_shot = true

[node name="Home_Base" type="Node2D" parent="." groups=["HomeBase"]]
script = ExtResource("2_7e0ir")

[node name="Sprite2D" type="Sprite2D" parent="Home_Base" groups=["HomeBase"]]
texture_filter = 1
texture_repeat = 1
position = Vector2(1094, 50)
scale = Vector2(3, 3)
texture = ExtResource("6_ej1rl")

[node name="Health_Amount" type="Label" parent="Home_Base"]
unique_name_in_owner = true
visible = false
offset_left = 852.0
offset_top = -1.0
offset_right = 1041.0
offset_bottom = 25.0
text = "Player Health Amount: 0"

[node name="Area2D" type="Area2D" parent="Home_Base"]
position = Vector2(1096, 10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Home_Base/Area2D"]
position = Vector2(-3, 72)
shape = SubResource("RectangleShape2D_cyjm1")

[node name="Health_UI" type="Label" parent="."]
offset_left = 478.0
offset_top = 1.0
offset_right = 664.0
offset_bottom = 27.0
text = "Current Player Health: 0"
script = ExtResource("3_8aa4j")
metadata/_edit_use_anchors_ = true

[node name="Level_StateChart" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("8_vr8dj")

[node name="Root" type="Node" parent="Level_StateChart"]
script = ExtResource("9_m634t")
initial_state = NodePath("Phase Initializing")

[node name="Win" type="Node" parent="Level_StateChart/Root"]
script = ExtResource("10_kvbm7")

[node name="Loss" type="Node" parent="Level_StateChart/Root"]
script = ExtResource("10_kvbm7")

[node name="Phase Initializing" type="Node" parent="Level_StateChart/Root"]
script = ExtResource("10_kvbm7")

[node name="To Phase Active" type="Node" parent="Level_StateChart/Root/Phase Initializing"]
script = ExtResource("11_eiycb")
to = NodePath("../../Phase Active")
event = &"phase_active"

[node name="Phase Active" type="Node" parent="Level_StateChart/Root"]
script = ExtResource("10_kvbm7")

[node name="To Win" type="Node" parent="Level_StateChart/Root/Phase Active"]
script = ExtResource("11_eiycb")
to = NodePath("../../Win")
event = &"win"

[node name="To Loss" type="Node" parent="Level_StateChart/Root/Phase Active"]
script = ExtResource("11_eiycb")
to = NodePath("../../Loss")
event = &"loss"

[node name="To Phase Initializing" type="Node" parent="Level_StateChart/Root/Phase Active"]
script = ExtResource("11_eiycb")
to = NodePath("../../Phase Initializing")
event = &"phase_init"

[node name="Basic_Turret" parent="." instance=ExtResource("12_0rquj")]
position = Vector2(393, 193)

[connection signal="timeout" from="Level_Controller/Phase_Cooldown" to="Level_Controller" method="_on_phase_cooldown_timeout"]
[connection signal="END_OF_PHASE" from="Enemy_Spawner" to="Level_Controller" method="_on_enemy_spawner_end_of_phase"]
[connection signal="child_exiting_tree" from="Enemy_Spawner/Enemy_Path" to="Level_Controller" method="_on_enemy_path_child_exiting_tree"]
[connection signal="timeout" from="Enemy_Spawner/Spawn_Cooldown" to="Enemy_Spawner" method="_on_spawn_cooldown_timeout"]
[connection signal="HOME_HEALTH_UPDATED" from="Home_Base" to="Level_Controller" method="_on_home_base_home_health_updated"]
[connection signal="HOME_HEALTH_UPDATED" from="Home_Base" to="Health_UI" method="_on_home_base_home_health_updated"]
[connection signal="state_entered" from="Level_StateChart/Root/Win" to="Level_Controller" method="_on_win_state_entered"]
[connection signal="state_entered" from="Level_StateChart/Root/Loss" to="Level_Controller" method="_on_loss_state_entered"]
[connection signal="state_entered" from="Level_StateChart/Root/Phase Initializing" to="Level_Controller" method="_on_phase_initializing_state_entered"]
[connection signal="state_entered" from="Level_StateChart/Root/Phase Active" to="Level_Controller" method="_on_phase_active_state_entered"]
